<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/badLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/goodLinkTextView"
        android:layout_below="@+id/goodLinkTextView"
        android:text="@string/processed_links_count"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentLinkTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:lines="3"
        android:maxLines="3"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_below="@+id/beginButton"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="14dp"
        android:ellipsize="end"
        android:text="@string/current_link"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/goodLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currentLinkTextView"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="21dp"
        android:text="@string/links_count"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/beginButton"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/enter_url"
        android:inputType="textUri" />

    <Button
        android:id="@+id/beginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentLinkTextView"
        android:layout_below="@+id/urlEditText"
        android:onClick="beginButtonClicked"
        android:text="@string/begin_text" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/urlEditText"
        android:visibility="invisible" />

</RelativeLayout>